--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,6 +34,7 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Canada -- Fiction'
 - !lcsh 'Adventure stories'
+- GITenberg
 title: "Law of the North (Originally published as Empery)\r\nA Story of Love and Battle\
   \ in Rupert's Land"
 url: http://www.gutenberg.org/ebooks/41962
